tests/testcases/invalid/semantic/14_case_outside_switch.ciel
// Error: 'case' label not within a switch statement
int main() {
    case 1:
        return 1;
    return 0;
}
